tests/invalid/entry_too_many_parameters.wio
fn Entry(args: string[], more: string[]) -> i32 {
    return 0;
}
